# BuilderAnalyzer

./: .gitignore  CLAUDE.md  README.md  main.py  main_old.py  pyproject.toml
src/: archetype.py  config.py  data_loader.py  output.py  set_parser.py  statistics.py  team_analyzer.py
